@@ -6,6 +6,10 @@
      -v is also specified, making it consistent with the manual and other
      uses of -l.
      ok grunk@
+   - djm@cvs.openbsd.org 2008/07/13 22:13:07
+     [channels.c]
+     use struct sockaddr_storage instead of struct sockaddr for accept(2)
+     address argument. from visibilis AT yahoo.com in bz#1485; ok markus@
 
 20080712
  - (djm) OpenBSD CVS Sync
@@ -4642,4 +4646,4 @@
    OpenServer 6 and add osr5bigcrypt support so when someone migrates
    passwords between UnixWare and OpenServer they will still work. OK dtucker@
 
-$Id: ChangeLog,v 1.5076 2008/07/14 01:28:29 djm Exp $
+$Id: ChangeLog,v 1.5077 2008/07/14 01:28:58 djm Exp $
